--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Gollum add-on repository for Home Assistant
-url: 'https://github.com/GollumDom/addon-repository'
+name: Gollum add-on repository for Home Assistant <crackyn fork>
+url: 'https://github.com/crackyn/addon-repository'
 maintainer: Damien Duboeuf <smeagolworms4@gmail.com>
